outputs/main/eoh_bpp_online_2025-04-27_03-25-30/evaluations/problem_eval-5251645541997674997_stdout.txt
Traceback (most recent call last):
  File "C:\Users\Nam\Documents\GitHub\HSEvo/problems/bpp_online/eval.py", line 9, in <module>
    from gpt import priority_v2 as priority
  File "C:\Users\Nam\Documents\GitHub\HSEvo\problems\bpp_online\gpt.py", line 1
    defined target waste range, and adapting the target range dynamically based on the item size.}
                                                                                                 ^
SyntaxError: unmatched '}'
